--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "MyIpReact",
-  "version": "1.0.0",
+  "name": "react-ip",
+  "version": "1.1",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
@@ -16,5 +16,19 @@
   "devDependencies": {
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
-  }
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/devigor/MyIp.git"
+  },
+  "keywords": [],
+  "author": "",
+  "bugs": {
+    "url": "https://github.com/devigor/MyIp/issues"
+  },
+  "homepage": "https://github.com/devigor/MyIp#readme",
+  "description": ""
 }
