--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-ip",
   "version": "1.1",
-  "main": "index.js",
+  "main": "./src/index.js",
   "license": "MIT",
   "dependencies": {
     "axios": "^0.15.3",
